realizando otimizacao de rotas

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Vincent Art</title>
+  <title>Vincent' Art</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon"  href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSzdc4NQK_FbVy81OvaBe3ZTCHgHYzIAs-WqIDiJ10TTMZKtuKsDy65BbVRvHhZWnXwP30&usqp=CAU">
